theme: Ensure that widgets do not overlap navigation

--- a/source/_static/css/widget-sidebar.css
+++ b/source/_static/css/widget-sidebar.css
@@ -145,3 +145,8 @@
 .rst-widget-sidebar .rst-widget-header:target .rst-widget-body {
     display:block;
 }
+
+/* Fix overlap of sidebar widgets and navbar*/
+.wy-nav-side {
+    padding-bottom: calc(4rem + 22px);
+}
